--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,12 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.2'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.7.2'
-    implementation 'org.projectlombok:lombok:1.18.24'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-configuration-processor:2.7.2'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.7.2'
     runtimeOnly 'mysql:mysql-connector-java:8.0.29'
