--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,11 @@ dependencies {
     runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.7.2'
     runtimeOnly 'mysql:mysql-connector-java:8.0.29'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.2'
+    
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
+
+    
 }
 
 jar {
