--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
 version: '3'
 services:
-#         db:
-#                 image: mysql:5.7
-#                 container_name: Database
-#                 ports:
-#                         - 3360:3306
-#                 environment:
-#                         MYSQL_USER: jaehwany
-#                         MYSQL_PASSWORD: 1234
-#                         MYSQL_ROOT_PASSWORD: 1234
-#                         TZ: Asia/Seoul
+        db:
+                image: mysql:5.7
+                container_name: Database
+                ports:
+                        - 3360:3306
+                environment:
+                        MYSQL_USER: jaehwany
+                        MYSQL_PASSWORD: 1234
+                        MYSQL_ROOT_PASSWORD: 1234
+                        TZ: Asia/Seoul
 
-#                 volumes:
-#                         - ./db/mysql/data:/var/lib/mysql
-#                         - ./db/mysql/sql:/sql
-#                         - ./db/mysql/init:/docker-entrypoint-initdb.d
-#                 restart: always
+                volumes:
+                        - ./db/mysql/data:/var/lib/mysql
+                        - ./db/mysql/sql:/sql
+                        - ./db/mysql/init:/docker-entrypoint-initdb.d
+                restart: always
 
         file-server:
                 build: ./File-Server
